[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/Backgrounds/floral-old-paper-or-parchment-900x702.jpg" type="Texture" id=1]
[ext_resource path="res://Mini Scenes/Pieces/BlackBack.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mini Scenes/Popups/InfluencePanel.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Kayambang.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Mini Scenes/Pieces/Dossier.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 4 )

[node name="InfluencePanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="BlackBack" parent="." instance=ExtResource( 2 )]
margin_bottom = 3.4917

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -270.0
margin_right = 350.0
margin_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.3306
margin_top = -249.525
margin_right = 171.669
margin_bottom = -189.525
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 1 )
text = "CLOSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 140.776
margin_top = -249.915
margin_right = 369.776
margin_bottom = -189.915
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 1 )
text = "FINISH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -329.459
margin_top = -253.891
margin_right = -155.458
margin_bottom = -199.891
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Influence"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dossier" parent="." instance=ExtResource( 5 )]
margin_left = -331.649
margin_top = -171.081
margin_right = -306.649
margin_bottom = -117.081

[node name="Dossier2" parent="." instance=ExtResource( 5 )]
margin_left = -331.649
margin_top = -79.3234
margin_right = -306.649
margin_bottom = -25.3234

[node name="Dossier3" parent="." instance=ExtResource( 5 )]
margin_left = -330.992
margin_top = 12.4341
margin_right = -305.992
margin_bottom = 66.4341

[node name="Dossier4" parent="." instance=ExtResource( 5 )]
margin_left = -330.992
margin_top = 101.607
margin_right = -305.992
margin_bottom = 155.607

[node name="Dossier5" parent="." instance=ExtResource( 5 )]
margin_left = -330.992
margin_top = 191.995
margin_right = -305.992
margin_bottom = 245.995
[connection signal="button_up" from="CloseButton" to="." method="_on_CloseButton_button_up"]
[connection signal="button_up" from="FinishButton" to="." method="_on_FinishButton_button_up"]
